--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
         <div class="row pb-4">
             <div class="portfolio-img-box col-lg-4 col-md-4 col-sm-12 p-3"> <a href="https://github.com/fabicf/tea-station-website"><img class="img-fluid"
                     src="./images/project1.JPG" alt=""> </a></div>
-            <div class="portfolio-img-box col-lg-4 col-md-4 col-sm-12 p-3"> <a href="https://github.com/fabicf/Ominigold-HMS"></a><img class="img-fluid"
+            <div class="portfolio-img-box col-lg-4 col-md-4 col-sm-12 p-3"> <a href="https://github.com/fabicf/Ominigold-HMS"><img class="img-fluid"
                     src="./images/project2.JPG" alt=""> </a></div>
             <div class="portfolio-img-box col-lg-4 col-md-4 col-sm-12 p-3"> <a href="#"><img class="img-fluid"
                     src="./images/project3.JPG" alt=""> </a></div>
